...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePicture" />

    <TextView
        android:id="@+id/profileUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="\@textview"
        android:textAlignment="center"
        android:textColor="@color/dark_grey"
        android:textSize="20sp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/profileFollowers"
        app:layout_constraintTop_toTopOf="@+id/profileFollowers" />

    <TextView
        android:id="@+id/profileNumberOfFollowers"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:clickable="true"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/dark_grey"
...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/profileFollowers"
        app:layout_constraintStart_toStartOf="@+id/profileFollowers"
        app:layout_constraintTop_toBottomOf="@+id/profileFollowers" />

    <TextView
        android:id="@+id/profileNumberOfFollowing"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:clickable="true"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/dark_grey"
...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/profileFollowing"
        app:layout_constraintStart_toStartOf="@+id/profileFollowing"
        app:layout_constraintTop_toBottomOf="@+id/profileFollowing" />

    <Button
        android:id="@+id/profileFollowButton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/followBtnNotFollowing"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profileNickname"
...
