<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.SearchFragment">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="TODO"
        android:src="@drawable/ic_search" />


    <EditText
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="10dp"
        android:background="@android:color/transparent"
        android:hint="Search..."
        android:inputType="textNoSuggestions"
        android:maxLines="1"
        android:textSize="24sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"

        />

</FrameLayout>