...
        <item
            android:id="@+id/your_posts"
            android:icon="@drawable/ic_whatshot_24dp"
            android:title="@string/your_posts_item" />

        <item
            android:id="@+id/follow"
            android:icon="@drawable/ic_addpost"
            android:title="@string/follow_item" />

        <item
            android:id="@+id/achievements"
            android:icon="@drawable/ic_light"
...
